# cim-network

./: .gitignore  .gitmodules  BASE_TOPOLOGIES.md  CLAUDE_CODE_INTEGRATION_GUIDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MCP_README.md  README.md  flake.nix  pyproject.toml  requirements.txt  run_all_examples.py  test_advanced_nix_generator.py  test_base_topologies.py  test_cim_topology.py  test_complete_integration.py  test_mcp.py  test_mcp_e2e.py  test_sdn_pipeline.py  test_visualization.py  working_demo.py
.claude/: CIM_NETWORK_MODULE.md  CLAUDE.md  INDEX.md  MANDATORY_CHECKLIST.md  MODULE_INDEX.md  PROGRESS_TRACKING.md  VALIDATION_STATUS.md  mcp-servers.json  mcp_settings.json
.claude/agents/: cim-domain-expert.md  cim-expert.md  network-topology-builder.json  network-topology-builder.py
.claude/contexts/: client.md  cluster.md  leaf.md  super-cluster.md
.claude/instructions/: cim-conversation-model.md  cim-core.md  conversation-model.md  date-handling.md  main-directives.md  registry-management.md
.claude/patterns/: ddd-ecs-integration.md  event-sourcing-detailed.md  graph-mermaid-patterns.md
.claude/standards/: nixos-development.md  rust-coding-standards.md
cim_network_mcp/: __init__.py  __main__.py  advanced_nix_generator.py  cim_mcp_server.py  cim_topology.py  sdn_server.py  server.py  simple_server.py
doc/: implementation-plan.md  progress.md
doc/architecture/: nix-topology-architecture.md
doc/design/: network-infrastructure-design.md  user-stories.md
doc/progress/: progress.json
examples/: advanced_nix_examples.py  demo.rs  dev_topology_example.py  interactive_topology_builder.rs  leaf_topology_example.py  sdn_demo.rs  simple_deployment.rs  simple_sdn_demo.rs  subagent_demo.rs  topology_progression_example.py  working_rust_demo.rs
src/: lib.rs
src/adapters/: mod.rs
src/adapters/nats/: mod.rs
src/adapters/netbox/: client.rs  mod.rs  types.rs
src/adapters/unifi/: client.rs  mod.rs  types.rs
src/agents/: cli.rs  mod.rs  network_topology_builder.rs  sdn_agent.rs  subagent.rs
src/api/: deployment.rs  mod.rs
src/application/: mod.rs  services.rs
src/domain/: aggregates.rs  commands.rs  errors.rs  events.rs  functor.rs  infrastructure_bridge.rs  mod.rs  ports.rs  value_objects.rs
src/domain/aggregates/: mod.rs  network_topology.rs  router_configuration.rs  switch_configuration.rs  workflow_router_configuration.rs
src/domain/configuration/: cisco_ios.rs  mod.rs
src/domain/state_machines/: mod.rs  network.rs  router.rs  switch.rs
src/domain/workflows/: configuration_generation.rs  mod.rs  network_deployment.rs  nix_deployment.rs  router_provisioning.rs  switch_configuration.rs
src/infrastructure/: mod.rs  nix.rs
src/nix_integration/: mod.rs
src/projections/: mod.rs
src/sdn/: mod.rs
src/service/: mod.rs
src/visualization/: mod.rs
tests/: nats_integration.rs  test_plan.md  unit_tests.rs
tests/integration/: mod.rs  nix_topology_tests.rs
tests/unit/: cisco_ios_generator_test.rs  events_test.rs  mod.rs  nix_generator_test.rs  router_aggregate_test.rs  state_machine_test.rs  switch_aggregate_test.rs
